summative.moria.Moria.scala.error
Erreur de compilation :
Moria:4: error: not found: value Direction
    while((getDirection() == Direction.EAST) && !estSurBiscuit() && !porteBiscuit()){
                             ^Moria:8: error: not found: value Direction
    while((getDirection() == Direction.WEST) && !estSurBiscuit() && porteBiscuit()){
                             ^